KOHO-3738 Update yarn to 3.3.1

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@
 
 /screenshots
 /node_modules
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
 /vendor
 public/assets/*
 public/uploads/*
